Update sonysales 1.Fix the error after replace Constant.HOST. Some can't be simple replaced.

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -2,11 +2,13 @@
 HOST=http://sonyfifa.sinaapp.com
 APP_ID= wxe2fed806213159c7
 APP_SECRET=24151f5740661c0afafd8f8145ce2061
+OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com
 
 #Test with Pingfanghe's account 
 #APP_ID=wxd6c996ffd460c4b7
 #APP_SECRET=a57f48290475ab4efd80bcfedee277c5
 #HOST=http://sonysales.sinaapp.com
+#OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com
 
 
 MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
