add oAuth in description
Change-Id: I9f0cce96e6f5362dfa6e346a216777ab7cbc96e3

--- a/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
+++ b/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
@@ -413,4 +413,14 @@
         <filter-name>jspFilter</filter-name>
         <url-pattern>/jsp/Management/*</url-pattern>
     </filter-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Description</display-name>
+    <servlet-name>Description</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.DescriptionServlet.Description</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Description</servlet-name>
+    <url-pattern>/Description</url-pattern>
+  </servlet-mapping>
 </web-app>
