update layou buy switch

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -21,6 +21,9 @@ FEEDBACK_SINGLE_MONEY=50
 
 SONY_FIFA_IMAGES_HOST=http://sonyfifa-sonyfifa.stor.sinaapp.com/
 
+#indicate that layou buy ON=1 or OFF=0
+LAYOUBUY_SWITCH=ON
+
 SONY_FIFA_INDEX_NEWS=<xml>\
 <ToUserName><![CDATA[_toUser_]]></ToUserName>\
 <FromUserName><![CDATA[_fromUser_]]></FromUserName>\
