update lashou buy function

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -21,8 +21,8 @@ FEEDBACK_SINGLE_MONEY=50
 
 SONY_FIFA_IMAGES_HOST=http://sonyfifa-sonyfifa.stor.sinaapp.com/
 
-#indicate that layou buy ON or OFF
-LAYOUBUY_SWITCH=ON
+#indicate that layou buy ON=(open function) or OFF=(close function)
+LAYOUBUY_SWITCH=OFF
 
 SONY_FIFA_INDEX_NEWS=<xml>\
 <ToUserName><![CDATA[_toUser_]]></ToUserName>\
