--- a/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
+++ b/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
@@ -278,8 +278,16 @@
       <url-pattern>/lashoufollow</url-pattern>
     </servlet-mapping>
     
-    
-    
+    <servlet>
+      <description></description>
+      <display-name>news</display-name>
+      <servlet-name>news</servlet-name>
+      <servlet-class>com.sonymobile.sonysales.sevlet.news.NewsSevlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+      <servlet-name>news</servlet-name>
+      <url-pattern>/news</url-pattern>
+    </servlet-mapping>
     
     
     
