Update sonysales 1.Update the resource image and remove unused image, css and js 2.Replace css and js library with sae cdn link 3.Revise the configuration of database connection pool for JVM err 4.Add log in nameList.jsp and switch for layou rank db search

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -34,25 +34,25 @@ SONY_FIFA_INDEX_NEWS=<xml>\
 <item>\
 <Title><![CDATA[\u7D22\u5C3CFIFA2014\u4E16\u754C\u676F\u72C2\u70ED\u5B63]]></Title> \
 <Description><![CDATA[]]></Description>\
-<PicUrl><![CDATA[_PICSHOST_/banner_popularity.jpg]]></PicUrl>\
+<PicUrl><![CDATA[_PICSHOST_/banner_entry.jpg]]></PicUrl>\
 <Url><![CDATA[_HOST_/jsp/Description.jsp?id=_fromUser_]]></Url>\
 </item>\
 <item>\
 <Title><![CDATA[\u6FC0\u60C5\u65E0\u654C\uFF01\u4EBA\u6C14\u5927\u5956\u699C]]></Title>\
 <Description><![CDATA[]]></Description>\
-<PicUrl><![CDATA[_PICSHOST_/entry1.jpg]]></PicUrl>\
+<PicUrl><![CDATA[_PICSHOST_/menu_entry1.jpg]]></PicUrl>\
 <Url><![CDATA[_HOST_/getNameList?id=_fromUser_]]></Url>\
 </item>\
 <item>\
 <Title><![CDATA[\u62C9\u4EBA\u6C14\uFF0C\u5F97\u5927\u5956\uFF01]]></Title>\
 <Description><![CDATA[]]></Description>\
-<PicUrl><![CDATA[_PICSHOST_/entry2.jpg]]></PicUrl>\
+<PicUrl><![CDATA[_PICSHOST_/menu_entry2.jpg]]></PicUrl>\
 <Url><![CDATA[_HOST_/activitypage?id=_fromUser_]]></Url>\
 </item>\
 <item>\
 <Title><![CDATA[\u6211\u7684\u6218\u51B5]]></Title>\
 <Description><![CDATA[]]></Description>\
-<PicUrl><![CDATA[_PICSHOST_/entry4.jpg]]></PicUrl>\
+<PicUrl><![CDATA[_PICSHOST_/menu_entry4.jpg]]></PicUrl>\
 <Url><![CDATA[_HOST_/myInfo?id=_fromUser_]]></Url>\
 </item>\
 </Articles>\
