Adapt the OAuth state
Adapt the OAuth state with all parameter transfering

Conflicts:
	05_cloud/01_SonySales/Code/sonysales/WebContent/jsp/LaPopularity/ActivityPage.jsp
	05_cloud/01_SonySales/Code/sonysales/WebContent/jsp/LashouBuy/LashouActivity.jsp
	05_cloud/01_SonySales/Code/sonysales/src/com/sonymobile/sonysales/servlet/DescriptionServlet/Description.java

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -1,21 +1,34 @@
 #Debug with Bo's account
-HOST=http://sonyfifa.sinaapp.com
-APP_ID= wxe2fed806213159c7
-APP_SECRET=24151f5740661c0afafd8f8145ce2061
-OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com
+#HOST=http://sonyfifa.sinaapp.com
+#APP_ID= wxe2fed806213159c7
+#APP_SECRET=24151f5740661c0afafd8f8145ce2061
+#OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com
+#SECOND_OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com/wechat_authorize
+#OAUTH_IDENTIFIER=sonysales
 
 #Test with Pingfanghe's account 
 #APP_ID=wxd6c996ffd460c4b7
 #APP_SECRET=a57f48290475ab4efd80bcfedee277c5
 #HOST=http://sonysales.sinaapp.com
-#OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com
+#OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
+#SECOND_OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
+#OAUTH_IDENTIFIER=sonysales
 
 
-MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
+#Test with Debug together's account 
+APP_ID=wx621b45d271cfa40b
+#APP_SECRET=a57f48290475ab4efd80bcfedee277c5
+HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/
+OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
+SECOND_OAUTH_REDIRECT_HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/oauth.php
+OAUTH_IDENTIFIER=sonysales
+
+MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
 #Test Server to get UserInfo
 #MASTER_ACCOUNT_GETUSERINFO_PATH=getuserinfo.php
+MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
 #Development server to get UserInfo
-MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
+#MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
 #LAYOU Group feedback money
 FEEDBACK_SINGLE_MONEY=50
 
@@ -23,6 +36,9 @@ SONY_FIFA_IMAGES_HOST=http://sonyfifa-sonyfifa.stor.sinaapp.com/
 
 #indicate that layou buy ON=(open function) or OFF=(close function)
 LAYOUBUY_SWITCH=OFF
+
+#indicate the self oauth switch ON or OFF
+SELFOAUTH_SWITCH=OFF
 
 SONY_FIFA_INDEX_NEWS=<xml>\
 <ToUserName><![CDATA[_toUser_]]></ToUserName>\
@@ -35,25 +51,25 @@ SONY_FIFA_INDEX_NEWS=<xml>\
 <Title><![CDATA[\u7D22\u5C3CFIFA2014\u4E16\u754C\u676F\u72C2\u70ED\u5B63]]></Title> \
 <Description><![CDATA[]]></Description>\
 <PicUrl><![CDATA[_PICSHOST_/banner_entry.jpg]]></PicUrl>\
-<Url><![CDATA[_HOST_/jsp/Description.jsp?id=_fromUser_]]></Url>\
+<Url><![CDATA[_HOST_/jsp/Description.jsp?id=_toUser_]]></Url>\
 </item>\
 <item>\
 <Title><![CDATA[\u6FC0\u60C5\u65E0\u654C\uFF01\u4EBA\u6C14\u5927\u5956\u699C]]></Title>\
 <Description><![CDATA[]]></Description>\
 <PicUrl><![CDATA[_PICSHOST_/menu_entry1.jpg]]></PicUrl>\
-<Url><![CDATA[_HOST_/getNameList?id=_fromUser_]]></Url>\
+<Url><![CDATA[_HOST_/getNameList?id=_toUser_]]></Url>\
 </item>\
 <item>\
 <Title><![CDATA[\u62C9\u4EBA\u6C14\uFF0C\u5F97\u5927\u5956\uFF01]]></Title>\
 <Description><![CDATA[]]></Description>\
 <PicUrl><![CDATA[_PICSHOST_/menu_entry2.jpg]]></PicUrl>\
-<Url><![CDATA[_HOST_/activitypage?id=_fromUser_]]></Url>\
+<Url><![CDATA[_HOST_/activitypage?id=_toUser_]]></Url>\
 </item>\
 <item>\
 <Title><![CDATA[\u6211\u7684\u6218\u51B5]]></Title>\
 <Description><![CDATA[]]></Description>\
 <PicUrl><![CDATA[_PICSHOST_/menu_entry4.jpg]]></PicUrl>\
-<Url><![CDATA[_HOST_/myInfo?id=_fromUser_]]></Url>\
+<Url><![CDATA[_HOST_/myInfo?id=_toUser_]]></Url>\
 </item>\
 </Articles>\
 </xml> 
