Add config attributes for servers

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -1,34 +1,43 @@
-#Debug with Bo's account
-#HOST=http://sonyfifa.sinaapp.com
-#APP_ID= wxe2fed806213159c7
-#APP_SECRET=24151f5740661c0afafd8f8145ce2061
-#OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com
-#SECOND_OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com/wechat_authorize
-#OAUTH_IDENTIFIER=sonysales
+#Development with Bo's account
+HOST=http://sonyfifa.sinaapp.com
+APP_ID= wxe2fed806213159c7
+APP_SECRET=24151f5740661c0afafd8f8145ce2061
+OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com
+SECOND_OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com/wechat_authorize
+OAUTH_IDENTIFIER=sonysales
+MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
+MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
 
 #Test with Pingfanghe's account 
 #APP_ID=wxd6c996ffd460c4b7
 #APP_SECRET=a57f48290475ab4efd80bcfedee277c5
-#HOST=http://sonysales.sinaapp.com
-#OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
-#SECOND_OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
+#HOST=http://sonyservice.sinaapp.com
+#OAUTH_REDIRECT_HOST=http://sonyservice.sinaapp.com/wechat_authorize
+#SECOND_OAUTH_REDIRECT_HOST=http://sonyservice.sinaapp.com/wechat_authorize
 #OAUTH_IDENTIFIER=sonysales
-
-
-#Test with Debug together's account 
-APP_ID=wx621b45d271cfa40b
-#APP_SECRET=a57f48290475ab4efd80bcfedee277c5
-HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/
-OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
-SECOND_OAUTH_REDIRECT_HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/oauth.php
-OAUTH_IDENTIFIER=sonysales
-
-MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
-#Test Server to get UserInfo
+#MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=getuserinfo.php
-MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
-#Development server to get UserInfo
-#MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
+
+#Stage with LICHENGKONGJIAN's account 
+#APP_ID=wx621b45d271cfa40b
+#APP_SECRET=a57f48290475ab4efd80bcfedee277c5
+#HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/
+#OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
+#SECOND_OAUTH_REDIRECT_HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/oauth.php
+#OAUTH_IDENTIFIER=sonysales
+#MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
+#MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
+
+#Product with SONY_XPERIA's account 
+#APP_ID=wx621b45d271cfa40b
+#APP_SECRET=a57f48290475ab4efd80bcfedee277c5
+#HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/
+#OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
+#SECOND_OAUTH_REDIRECT_HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/oauth.php
+#OAUTH_IDENTIFIER=sonysales
+#MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
+#MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
+
 #LAYOU Group feedback money
 FEEDBACK_SINGLE_MONEY=50
 
@@ -38,7 +47,7 @@ SONY_FIFA_IMAGES_HOST=http://sonyfifa-sonyfifa.stor.sinaapp.com/
 LAYOUBUY_SWITCH=OFF
 
 #indicate the self oauth switch ON or OFF
-SELFOAUTH_SWITCH=OFF
+SELFOAUTH_SWITCH=ON
 
 SONY_FIFA_INDEX_NEWS=<xml>\
 <ToUserName><![CDATA[_toUser_]]></ToUserName>\
