Update the menu words

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -69,7 +69,7 @@ SONY_FIFA_INDEX_NEWS=<xml>\
 <Url><![CDATA[_HOST_/getNameList?id=_toUser_]]></Url>\
 </item>\
 <item>\
-<Title><![CDATA[\u62C9\u4EBA\u6C14\uFF0C\u5F97\u5927\u5956\uFF01]]></Title>\
+<Title><![CDATA[\u53D1\u5FEB\u62A5, \u62C9\u4EBA\u6C14, \u5F97\u5927\u5956!]]></Title>\
 <Description><![CDATA[]]></Description>\
 <PicUrl><![CDATA[_PICSHOST_/menu_entry2.jpg]]></PicUrl>\
 <Url><![CDATA[_HOST_/activitypage?id=_toUser_]]></Url>\
