Update the identifier key and value

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -4,7 +4,7 @@ APP_ID= wxe2fed806213159c7
 APP_SECRET=24151f5740661c0afafd8f8145ce2061
 OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com
 SECOND_OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com/wechat_authorize
-OAUTH_IDENTIFIER=sonysales
+OAUTH_IDENTIFIER=1
 MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
 MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
 
@@ -14,7 +14,7 @@ MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
 #HOST=http://sonyservice.sinaapp.com
 #OAUTH_REDIRECT_HOST=http://sonyservice.sinaapp.com/wechat_authorize
 #SECOND_OAUTH_REDIRECT_HOST=http://sonyservice.sinaapp.com/wechat_authorize
-#OAUTH_IDENTIFIER=sonysales
+#OAUTH_IDENTIFIER=1
 #MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=getuserinfo.php
 
@@ -24,7 +24,7 @@ MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
 #HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/
 #OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
 #SECOND_OAUTH_REDIRECT_HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/oauth.php
-#OAUTH_IDENTIFIER=sonysales
+#OAUTH_IDENTIFIER=1
 #MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
 
@@ -34,7 +34,7 @@ MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
 #HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/
 #OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
 #SECOND_OAUTH_REDIRECT_HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/oauth.php
-#OAUTH_IDENTIFIER=sonysales
+#OAUTH_IDENTIFIER=1
 #MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
 
