--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -7,6 +7,7 @@ SECOND_OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com/wechat_authorize
 OAUTH_IDENTIFIER=1
 MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
 MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
+ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&idx=1&sn=c2c817de70b14a702fe02da6997f8f64#rd
 
 #Test with Pingfanghe's account 
 #APP_ID=wxd6c996ffd460c4b7
@@ -17,6 +18,7 @@ MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
 #OAUTH_IDENTIFIER=1
 #MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=getuserinfo.php
+#ATTENTION_PAGE=
 
 #Stage with LICHENGKONGJIAN's account 
 #APP_ID=wx621b45d271cfa40b
@@ -27,6 +29,7 @@ MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
 #OAUTH_IDENTIFIER=1
 #MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
+#ATTENTION_PAGE=
 
 #Product with SONY_XPERIA's account 
 #APP_ID=wx621b45d271cfa40b
@@ -37,6 +40,7 @@ MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
 #OAUTH_IDENTIFIER=1
 #MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
+#ATTENTION_PAGE=
 
 #LAYOU Group feedback money
 FEEDBACK_SINGLE_MONEY=50
