--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -47,6 +47,8 @@ FEEDBACK_SINGLE_MONEY=50
 
 SONY_FIFA_IMAGES_HOST=http://sonyfifa-sonyfifa.stor.sinaapp.com/
 
+JD_COUPON_LINK=http://vip.jd.com/
+
 #indicate that layou buy ON=(open function) or OFF=(close function)
 LAYOUBUY_SWITCH=OFF
 
