--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -18,7 +18,7 @@ ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&id
 #OAUTH_IDENTIFIER=1
 #MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=getuserinfo.php
-#ATTENTION_PAGE=
+#ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&idx=1&sn=c2c817de70b14a702fe02da6997f8f64#rd
 
 #Stage with LICHENGKONGJIAN's account 
 #APP_ID=wx621b45d271cfa40b
@@ -29,7 +29,7 @@ ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&id
 #OAUTH_IDENTIFIER=1
 #MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
-#ATTENTION_PAGE=
+#ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&idx=1&sn=c2c817de70b14a702fe02da6997f8f64#rd
 
 #Product with SONY_XPERIA's account 
 #APP_ID=wx621b45d271cfa40b
@@ -40,7 +40,7 @@ ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&id
 #OAUTH_IDENTIFIER=1
 #MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
-#ATTENTION_PAGE=
+#ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&idx=1&sn=c2c817de70b14a702fe02da6997f8f64#rd
 
 #LAYOU Group feedback money
 FEEDBACK_SINGLE_MONEY=50
