Update the words in Description and Myinfo

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -2,7 +2,7 @@
 HOST=http://sonyfifa.sinaapp.com
 APP_ID= wxe2fed806213159c7
 APP_SECRET=24151f5740661c0afafd8f8145ce2061
-OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com
+OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com/wechat_authorize
 SECOND_OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com/wechat_authorize
 OAUTH_IDENTIFIER=1
 MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
@@ -49,6 +49,9 @@ SONY_FIFA_IMAGES_HOST=http://sonyfifa-sonyfifa.stor.sinaapp.com/
 
 JD_COUPON_LINK=http://vip.jd.com/
 
+SW2_LINK=http://www.sonystyle.com.cn/products/accy/xperia_accy/sw2.htm
+SBH20_LINK=http://www.sonystyle.com.cn/products/accy/xperia_accy/sbh20.htm
+
 #indicate that layou buy ON=(open function) or OFF=(close function)
 LAYOUBUY_SWITCH=OFF
 
@@ -63,7 +66,7 @@ SONY_FIFA_INDEX_NEWS=<xml>\
 <ArticleCount>4</ArticleCount>\
 <Articles>\
 <item>\
-<Title><![CDATA[\u7D22\u5C3CFIFA2014\u4E16\u754C\u676F\u72C2\u70ED\u5B63]]></Title> \
+<Title><![CDATA[\u7D22\u5C3C2014\u4E16\u754C\u676F\u72C2\u70ED\u5B63]]></Title> \
 <Description><![CDATA[]]></Description>\
 <PicUrl><![CDATA[_PICSHOST_/banner_entry.jpg]]></PicUrl>\
 <Url><![CDATA[_HOST_/jsp/Description.jsp?id=_toUser_]]></Url>\
