Update the error link and modify the description

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -23,7 +23,7 @@ ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&id
 #Stage with LICHENGKONGJIAN's account 
 #APP_ID=wx621b45d271cfa40b
 #APP_SECRET=a57f48290475ab4efd80bcfedee277c5
-#HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/
+#HOST=http://sonysales.sinaapp.com
 #OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
 #SECOND_OAUTH_REDIRECT_HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/oauth.php
 #OAUTH_IDENTIFIER=1
