--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -1,13 +1,13 @@
 #Development with Bo's account
-HOST=http://sonyfifa.sinaapp.com
-APP_ID= wxe2fed806213159c7
-APP_SECRET=24151f5740661c0afafd8f8145ce2061
-OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com/wechat_authorize
-SECOND_OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com/wechat_authorize
-OAUTH_IDENTIFIER=1
-MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
-MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
-ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&idx=1&sn=c2c817de70b14a702fe02da6997f8f64#rd
+#HOST=http://sonyfifa.sinaapp.com
+#APP_ID= wxe2fed806213159c7
+#APP_SECRET=24151f5740661c0afafd8f8145ce2061
+#OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com/wechat_authorize
+#SECOND_OAUTH_REDIRECT_HOST=http://sonyfifa.sinaapp.com/wechat_authorize
+#OAUTH_IDENTIFIER=1
+#MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
+#MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
+#ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&idx=1&sn=c2c817de70b14a702fe02da6997f8f64#rd
 
 #Test with Pingfanghe's account 
 #APP_ID=wxd6c996ffd460c4b7
@@ -32,22 +32,22 @@ ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&id
 #ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&idx=1&sn=c2c817de70b14a702fe02da6997f8f64#rd
 
 #Product with SONY_XPERIA's account 
-#APP_ID=wx621b45d271cfa40b
+APP_ID=wx91c3d26b150a3829
 #APP_SECRET=a57f48290475ab4efd80bcfedee277c5
-#HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/
-#OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
-#SECOND_OAUTH_REDIRECT_HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/oauth.php
-#OAUTH_IDENTIFIER=1
-#MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
-#MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
-#ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&idx=1&sn=c2c817de70b14a702fe02da6997f8f64#rd
+HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/
+OAUTH_REDIRECT_HOST=http://sonysales.sinaapp.com/wechat_authorize
+SECOND_OAUTH_REDIRECT_HOST=http://weimarketing.sinaapp.com/weixin/tmp/sonysales20140603/oauth.php
+OAUTH_IDENTIFIER=1
+MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
+MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
+ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MjM5NjAwMzEwMA==&mid=201215716&idx=1&sn=194d28c5bcfdc4001449b5f83dafecfa&from=singlemessage&isappinstalled=0#rd
 
 #LAYOU Group feedback money
 FEEDBACK_SINGLE_MONEY=50
 
 SONY_FIFA_IMAGES_HOST=http://sonyfifa-sonyfifa.stor.sinaapp.com/
 
-JD_COUPON_LINK=http://vip.jd.com/
+JD_COUPON_LINK=http://sale.jd.com/m/act/e1WqaEMf58IJl.html
 
 SW2_LINK=http://www.sonystyle.com.cn/products/accy/xperia_accy/sw2.htm
 SBH20_LINK=http://www.sonystyle.com.cn/products/accy/xperia_accy/sbh20.htm
@@ -56,7 +56,7 @@ SBH20_LINK=http://www.sonystyle.com.cn/products/accy/xperia_accy/sbh20.htm
 LAYOUBUY_SWITCH=OFF
 
 #indicate the self oauth switch ON or OFF
-SELFOAUTH_SWITCH=ON
+SELFOAUTH_SWITCH=OFF
 
 SONY_FIFA_INDEX_NEWS=<xml>\
 <ToUserName><![CDATA[_toUser_]]></ToUserName>\
