Remove the cache in hibernate

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -8,6 +8,7 @@
 #MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
 #ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&idx=1&sn=c2c817de70b14a702fe02da6997f8f64#rd
+#SELFOAUTH_SWITCH=ON
 
 #Test with Pingfanghe's account 
 #APP_ID=wxd6c996ffd460c4b7
@@ -19,6 +20,7 @@
 #MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=getuserinfo.php
 #ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&idx=1&sn=c2c817de70b14a702fe02da6997f8f64#rd
+#SELFOAUTH_SWITCH=ON
 
 #Stage with LICHENGKONGJIAN's account 
 #APP_ID=wx621b45d271cfa40b
@@ -30,6 +32,7 @@
 #MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
 #MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
 #ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MzA5NDAwODUxMQ==&mid=200111401&idx=1&sn=c2c817de70b14a702fe02da6997f8f64#rd
+#SELFOAUTH_SWITCH=OFF
 
 #Product with SONY_XPERIA's account 
 APP_ID=wx91c3d26b150a3829
@@ -41,6 +44,7 @@ OAUTH_IDENTIFIER=1
 MASTER_ACCOUNT_HOST=http://weimarketing.sinaapp.com/weixin/offline/games/usergames/user_120/controller/
 MASTER_ACCOUNT_GETUSERINFO_PATH=userinfo.php
 ATTENTION_PAGE=http://mp.weixin.qq.com/s?__biz=MjM5NjAwMzEwMA==&mid=201215716&idx=1&sn=194d28c5bcfdc4001449b5f83dafecfa&from=singlemessage&isappinstalled=0#rd
+SELFOAUTH_SWITCH=OFF
 
 #LAYOU Group feedback money
 FEEDBACK_SINGLE_MONEY=50
@@ -54,9 +58,6 @@ SBH20_LINK=http://www.sonystyle.com.cn/products/accy/xperia_accy/sbh20.htm
 
 #indicate that layou buy ON=(open function) or OFF=(close function)
 LAYOUBUY_SWITCH=OFF
-
-#indicate the self oauth switch ON or OFF
-SELFOAUTH_SWITCH=OFF
 
 SONY_FIFA_INDEX_NEWS=<xml>\
 <ToUserName><![CDATA[_toUser_]]></ToUserName>\
