Update the userinfo
Change-Id: I333722601901eb7ca7be4d80dfd5e0914af76688

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -73,7 +73,7 @@ SONY_FIFA_INDEX_NEWS=<xml>\
 <Title><![CDATA[\u7D22\u5C3C2014\u4E16\u754C\u676F\u72C2\u70ED\u5B63]]></Title> \
 <Description><![CDATA[]]></Description>\
 <PicUrl><![CDATA[_PICSHOST_/banner_entry.jpg]]></PicUrl>\
-<Url><![CDATA[_HOST_/jsp/Description.jsp?id=_toUser_]]></Url>\
+<Url><![CDATA[_HOST_/Description?id=_toUser_]]></Url>\
 </item>\
 <item>\
 <Title><![CDATA[\u6FC0\u60C5\u65E0\u654C\uFF01\u4EBA\u6C14\u5927\u5956\u699C]]></Title>\
