add end date function

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -59,6 +59,9 @@ SBH20_LINK=http://www.sonystyle.com.cn/products/accy/xperia_accy/sbh20.htm
 #indicate that layou buy ON=(open function) or OFF=(close function)
 LAYOUBUY_SWITCH=OFF
 
+#end date
+END_DATE=20140630
+
 SONY_FIFA_INDEX_NEWS=<xml>\
 <ToUserName><![CDATA[_toUser_]]></ToUserName>\
 <FromUserName><![CDATA[_fromUser_]]></FromUserName>\
